@@ -1,0 +1,14 @@
+var on = require('./on'),
+  recall = require('std/recall')
+
+module.exports = function onImageLoaded(img, callback) {
+  if (!img || img.tagName != 'IMG') { return }
+  // IE supports readyState - others support complete
+  var hasReadyState = ('readyState' in img),
+  imageIsLoading = (hasReadyState ? (img.readyState != 'complete') : ('complete' in img && img.complete != true))
+  if (imageIsLoading) {
+    on(img, hasReadyState ? 'readystatechange' : 'load', recall(this, arguments))
+    return
+  }
+  callback()
+}
